[feat] redis 재고 차감 -> 재고 예약으로 로직 수정
- 예약, 확정, 취소 Lua 스크립트 작성
- StockRedisService에 예약/확정/취소 메서드 구현
- 관련 CommonErrorCode 정의